src/main/java/semantic/symbolTable/test/failing/redefinedConstructor.ru
/? RedefinedConstructorException
impl A {
    .() {}
    fn someFunction() -> void {}
    .(Int a) {}
}

start {}